# appCreatorShader

./: .gitignore  CMakeLists.txt  main.cpp
.cursor/rules/: 01_cpp.mdc  02_cmake.mdc  core_project.mdc
build-sys/: CMakeCache.txt  Makefile  appCreatorShader  cmake_install.cmake
build-sys/_build/SDL2/: Makefile  SDL_config.h.intermediate  cmake_install.cmake  cmake_uninstall.cmake  libSDL2-2.0.so.0  libSDL2-2.0.so.0.3000.10  sdl2-config  sdl2.pc
data/: presets.json
export_samples/: effect_gravity_lens_config.h  effect_gravity_lens_glue.cpp
src/converter/: ShaderConverter.cpp  ShaderConverter.h
src/core/: AppState.cpp  AppState.h  Application.cpp  Application.h  GlDebug.h  GlEnums.h  GlIncludes.h  GlLoader.cpp  GlLoader.h  PresetLibrary.cpp  PresetLibrary.h  Renderer.cpp  Renderer.h  ShaderConstructorConfig.cpp  ShaderConstructorConfig.h  ShaderDefaults.cpp  ShaderDefaults.h  ShaderExport.cpp  ShaderExport.h  ShaderProgram.cpp  ShaderProgram.h  UniformRegistry.cpp  UniformRegistry.h
src/effects/: EFFECT_COMPATIBILITY.txt  effect_glsl_common.cpp  effect_glsl_common.h  effect_registry.cpp  effect_registry.h  effects_library.cpp  effects_library.h  ieffect.cpp  ieffect.h  param_descriptor.cpp  param_descriptor.h
src/shaders/: default_desktop.frag  default_desktop.vert  default_mobile.frag  default_mobile.vert
src/ui/: UiManager.cpp  UiManager.h  ui_constructor.cpp  ui_constructor.h
